--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -46,6 +46,11 @@ screen.LIGHTING=Lighting
         value.FAST_GI.true=On
         value.FAST_GI.false=Off
 
+    option.PANORAMIC_WORLD=Panoramic World
+        option.PANORAMIC_WORLD.comment=Meant for use with curved screens. Slightly curves your world to avoid the stretching you see near the edges of the screen at higher FOVs.
+        value.PANORAMIC_WORLD.true=On
+        value.PANORAMIC_WORLD.false=Off
+
     screen.SSAO_BETA=Ambient Occlusion
     
     screen.SSAO=Ambient Occlusion §c(Experimental)§r
