Improved wind-water-flooding behavior

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -305,7 +305,7 @@ screen.MISC=Extras
 
         option.RIMLIGHT_OUTLINE=Outline Everything
             option.RIMLIGHT_OUTLINE.comment=Outline the corners of things as well as the edges. Similar to the outlines in official Minecraft promotional material.
-            value.RIMLIGHT_OUTLINE.true=On
+            value.RIMLIGHT_OUTLINE.true=On §c(Experimental)§r
             value.RIMLIGHT_OUTLINE.false=Off
         
         
