Wave improvements Fixed water appearing under blocks underwater Added user-controllable wave strength slider

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -364,6 +364,8 @@ screen.MISC=Extras
 
             option.WIND_STRENGTH_CONSTANT_USER=Wind Strength
 
+            option.WAVE_STRENGTH_CONSTANT_USER=Wave Strength
+                option.WAVE_STRENGTH_CONSTANT_USER.comment=Changes how much the wind causes waves.
 
         screen.RAIN=Rain
 
