--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -449,7 +449,7 @@ screen.MISC=Extras
                 value.RAIN_FOG.false=Off
 
 
-        screen.DIMENSION_WEATHER=Per-Dimension Weather Controls
+        screen.DIMENSION_WEATHER=Per-Dimension Controls
             screen.DIMENSION_WEATHER.comment=Change weather settings in each vanilla dimension. Currently this only includes nether weather
 
             option.OVERWORLD_FOGGY_WEATHER=Foggy Weather In Overworld
