Added preset settings for AA modes

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -21,9 +21,10 @@ screen.POST_PROCESSING=Post Processing
         option.POST_SATURATION.comment=Also known as saturation. Increases the strength of colors in your world.
 
     option.AA_MODE=Anti-Aliasing
-        option.AA_MODE.comment=Reduces jagged edges on geometry edges and (when texture filtering is off) on textures. Enabled ➤ Small performance hit.
+        option.AA_MODE.comment=Texture filtering reduces jagged pixels in block textures. Antialiasing (TAA) reduces jagged pixels on all sharp edges. Credit to youtuber @t3ssel8r for the concept and implementation of texture filtering. Enabled ➤ Small performance hit.
         value.AA_MODE.0=§cOff
-        value.AA_MODE.1=TAA
+        value.AA_MODE.1=Texture Filtering
+        value.AA_MODE.2=TAA
 
     option.DITHERING_MODE=Dithering
         option.DITHERING_MODE.comment=Slightly randomizes pixel colors to get rid of ugly bands of color (for instance, ones visible in the sky) that form when your monitor can't display color precisely enough. Does not work when Render Quality is greater than 1x.  On ➤ Minimal performance hit.
